deployment/stacks/application/base/template/networking/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
